# personal-portfolio-agent

./: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
src/: app.ipynb  compare_llms.ipynb  personal_career_agent.ipynb  personal_details_agent.ipynb
src/controller/: chat_controller.py
src/llms/: anthropic_llm.ipynb  deepseek_llm.ipynb  gemini_llm.ipynb  gemini_llm.py  groq_llm.ipynb  ollama.ipynb  openai_llm.ipynb  openai_llm.py
src/public/: certificates.json  profile.txt  projects.json
src/tools/: certificate_info_tool.py  helper_tools.py  main.py  project_info_tool.py  push_over_message_tool.py
